# LAN_Collector

./: .gitignore  README.md
Master/: CMakeLists.txt  collector.qrc  main.cpp
Master/qml/: main.qml
Master/src/: infomanager.cpp  infomanager.h  infomodel.cpp  infomodel.h  main.cpp
Slave/: CMakeLists.txt
Slave/src/: broadcaster.cpp  broadcaster.h  main.cpp
proto/: general.proto  json.proto  message_slave_device.proto
